--- a/admin.html
+++ b/admin.html
@@ -9,25 +9,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body data-theme="light">
-    <!-- Login Section -->
-    <div id="login-section" class="login-section">
-        <div class="login-container">
-            <h1><i class="fas fa-lock"></i> Admin Portal</h1>
-            <form id="login-form">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="text" id="username" value="BusArmyDude" readonly class="form-control">
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" required class="form-control">
-                </div>
-                <button type="submit" class="btn btn-primary">
-                    <i class="fas fa-sign-in-alt"></i> Login
-                </button>
-            </form>
-        </div>
+    <!-- Update just the login form section in your index.html -->
+<div id="login-section" class="login-section">
+    <div class="login-container">
+        <h1><i class="fas fa-lock"></i> Admin Portal</h1>
+        <form id="login-form">
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" class="form-control" value="BusArmyDude" readonly>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" class="form-control" required>
+            </div>
+            <button type="submit" class="btn btn-primary">
+                <i class="fas fa-sign-in-alt"></i> Login
+            </button>
+        </form>
     </div>
+</div>
 
     <!-- Admin Panel -->
     <div id="admin-panel" class="admin-panel" style="display: none;">
