--- a/admin.html
+++ b/admin.html
@@ -242,9 +242,11 @@
                 <div class="settings-grid glass-panel">
                     <div class="setting-group">
                         <h3>Interface Theme</h3>
-                        <select id="theme-select" class="neural-select">
-                            <option value="dark">Dark Matter</option>
-                            <option value="light">Light Core</option>
+                        <select id="theme-select" aria-label="Select Theme">
+                            <option value="dark">Dark Theme</option>
+                            <option value="light">Light Theme</option>
+                            <option value="neural">Neural Theme</option>
+                            <option value="quantum">Quantum Theme</option>
                         </select>
                     </div>
                     <div class="setting-group">
