--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@ s0.parentNode.insertBefore(s1,s0);
 
         <!-- Countdown Section -->
         <div class="countdown-section">
-            <h2>Countdown to Summer Solstice 2025!</h2>
+            <h2>Countdown to WWDC 2025!</h2>
             <div class="countdown-container">
                 <div class="countdown-block">
                     <div id="countdown-years" class="flip-clock">
@@ -693,7 +693,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $1,067.49</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> September 20, 2024</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> November 08, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E5232a)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> iOS 18.4 (22E239)</div>
         <div class="tech-detail"><i class="fas fa-heart"></i><span>Battery Health:</span></div>
         <div class="battery-container">
             <div class="battery-icon">
@@ -701,7 +701,7 @@ s0.parentNode.insertBefore(s1,s0);
                 <div class="battery-percentage">99%</div>
             </div>
         </div>
-        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 208</div>
+        <div class="tech-detail"><i class="fas fa-sync"></i><span>Battery Charge Cycles:</span> 209</div>
     </div>
     
     <!-- Apple Watch Ultra 2 Section -->
@@ -735,7 +735,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="tech-detail"><i class="fas fa-tag"></i><span>Price:</span> $742.29</div>
         <div class="tech-detail"><i class="fas fa-calendar-plus"></i><span>Date Released:</span> January 17, 2023</div>
         <div class="tech-detail"><i class="fas fa-shopping-cart"></i><span>Date Bought:</span> May 16, 2024</div>
-        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 Beta (24E5238a)</div>
+        <div class="tech-detail"><i class="fab fa-apple"></i><span>OS Version:</span> macOS Sequoia 15.4 (24E246)</div>
     </div>
 </div>
 
