--- a/index.html
+++ b/index.html
@@ -203,10 +203,12 @@ s0.parentNode.insertBefore(s1,s0);
     </div>
 
     <!-- Unit Selection Dropdown -->
-    <select id="unit-select">
-        <option value="Celsius">Celsius (°C)</option>
-        <option value="Fahrenheit">Fahrenheit (°F)</option>
-    </select>
+    <div class="unit-select-container">
+        <select id="unit-select">
+            <option value="Celsius">Celsius (°C)</option>
+            <option value="Fahrenheit">Fahrenheit (°F)</option>
+        </select>
+    </div>
 
     <!-- Weather Info Section -->
     <div class="weather-info">
@@ -215,7 +217,7 @@ s0.parentNode.insertBefore(s1,s0);
         <img id="weather-icon" src="" alt="Weather Icon" />
     </div>
 
-    <!-- Detailed Weather Information in Individual Containers -->
+    <!-- Detailed Weather Information -->
     <div class="weather-details">
         <div class="weather-detail-container">
             <p id="feels-like"><strong>Feels Like:</strong> --°C</p>
@@ -267,6 +269,7 @@ s0.parentNode.insertBefore(s1,s0);
         </div>
     </div>
 </div>
+
         
              <!-- TikTok Shoutouts Section -->
         <div class="shoutouts-section section">
